  systematically. (VRI)
- bios/machine.c bios/machine.h bios/screen.c bios/vectors.S include/config.h
  vdi/vdi_col.c: Added the CONF_WITH_STE_SHIFTER define. (VRI)
- bios/bios.c bios/dmasound.c bios/dmasound.h bios/machine.c bios/machine.h:
  Added the CONF_WITH_DMASOUND define. (VRI)
- bios/machine.c bios/machine.h include/config.h: Added the CONF_WITH_VME
  define. (VRI)
- bios/machine.c bios/machine.h include/config.h: Added the
  CONF_WITH_DIP_SWITCHES define. (VRI)
- bios/kprint.c bios/kprint.h include/config.h: Added the CONF_WITH_ASSERT
  define to enable/disable the assert() function. (VRI)
- Makefile: Display the amount of bytes free when building a ROM. (VRI)
- bdos/bdosmain.c bdos/bios.h bdos/console.c bdos/fs.h bdos/fsbuf.c bdos/fsdir.c
  bdos/fsdrive.c bdos/fsfat.c bdos/fsglob.c bdos/fshand.c bdos/fsio.c
  bdos/fsmain.c bdos/fsopnclo.c bdos/iumem.c bdos/kpgmld.c bdos/osmem.c
  bdos/proc.c bdos/umem.c: Add includes for bpb.h to fs.h, fsdrive.c,
  bdosmain.c. Remove all references to bios.h in bdos/ source & delete
  bdos/bios.h. Submitted by Roger Burrows. (VRI)
- bios/blkdev.h bios/initinfo.c: Fix the maximum number of drives at 26 (A: thru
  Z:). Note that bdos/fsglob.c still allows up to 32, which means we're wasting
  24 bytes. Submitted by Roger Burrows. (VRI)

2011-09-13
- vdi/vdi_line.c: Fix the minimal width of arrow heads. Contributed by Eero
  Tamminen. (VRI)
- aes/gemgraf.c aes/gemgraf.h desk/aesbind.h desk/desk1.c desk/deskapp.c
  desk/deskapp.h desk/deskdir.c desk/deskfpd.c desk/deskfun.c desk/deskgraf.c
  desk/deskgraf.h desk/deskgsx.c desk/deskinf.c desk/deskinf.h desk/deskins.c
  desk/deskobj.c desk/deskpro.c desk/deskwin.c desk/gembind.c desk/taddr.c
  include/taddr.h: Static cleanup. Contributed by Eero Tamminen. (VRI)

2011-09-16
- bios/bios.c bios/lineainit.c bios/lineavars.h bios/screen.c vdi/vdi_defs.h:
  Declare Line A stuff in lineavars.h header instead of in several C-files.
  Contributed by Eero Tamminen. (VRI)