@@ -111,7 +111,7 @@ EVB             /* event block structure */
         EVB     *e_nextp;       /* link to next event on PD event list */
         EVB     *e_link;        /* link to next block on event chain */
         EVB     *e_pred;        /* link to prev block on event chain */
-        BYTE    *e_pd;          /* owner PD (data for fork) */
+        PD      *e_pd;          /* owner PD (data for fork) */
         LONG    e_parm;         /* parm for request -> event comm */
         WORD    e_flag;
         EVSPEC  e_mask;         /* mask for event notification */
